# pondsocket

./: .gitignore  CONFORMANCE.md  DISTRIBUTED_PROTOCOL.md
.github/workflows/: javascript-ci.yml  npm-publish.yml
go/pondsocket/: CLAUDE.md  Makefile  README.md  adversarial_debug_test.go  adversarial_distributed_test.go  adversarial_join_test.go  adversarial_protocol_test.go  arrays.go  arrays_test.go  assigns_sync_test.go  basic_presence_sync_test.go  channel.go  channel_test.go  conn.go  conn_test.go  connectionContext.go  connectionContext_test.go  context_test.go  cross_node_user_commands_test.go  distributed_presence_test.go  distributed_protocol.go  distributed_protocol_test.go  distributed_state_test.go  endpoint.go  endpoint_test.go  errors.go  errors_test.go  eventContext.go  go.mod  go.sum  hooks.go  hooks_test.go  joinContext.go  join_protocol_test.go  leaveContext.go  lobby.go  lobby_test.go  manager.go  manager_test.go  message_duplication_test.go  (+20 more)
go/pondsocket-client/: README.md  adversarial_client_test.go  adversarial_lifecycle_test.go  channel.go  channel_test.go  client.go  client_test.go  go.mod  heartbeat_test.go  integration_test.go  join_protocol_test.go  types.go  types_test.go
go/pondsocket-client/example/: go.mod  main.go
javascript/: RELEASING.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.type-tests.json
javascript/client/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
javascript/comnon/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
javascript/core/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
javascript/express/: package-lock.json  package.json  tsconfig.json
javascript/nest/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
javascript/scripts/: publish-packages.mjs  verify-packages.mjs
javascript/type-tests/: pond-express-schema.ts  pond-nest-schema.ts  pond-schema.ts
pkg/go-server/: Makefile  README.md  arrays.go  arrays_test.go  assigns_sync_test.go  basic_presence_sync_test.go  channel.go  channel_test.go  conn.go  conn_test.go  connectionContext.go  distributed_presence_test.go  endpoint.go  endpoint_test.go  errors.go  errors_test.go  eventContext.go  go.mod  go.sum  hooks.go  hooks_test.go  joinContext.go  lobby.go  lobby_test.go  manager.go  manager_test.go  middleware.go  middleware_test.go  new_presence_sync_test.go  outgoingContext.go  parser.go  parser_test.go  presence.go  presence_test.go  pubsub.go  pubsub_integration_test.go  pubsub_local.go  pubsub_test.go  server.go  server_test.go  (+4 more)
python/: .gitignore  Makefile  PARITY.md  README.md  build_backend.py  pyproject.toml
python/pondsocket/: README.md  pyproject.toml
python/pondsocket-asgi/: README.md  pyproject.toml
python/pondsocket-asgi/examples/: fastapi_demo.py  raw_uvicorn.py  starlette_demo.py
python/pondsocket-asgi/src/pondsocket_asgi/: __init__.py  _scope.py  _serialize.py  _sse.py  app.py  testing.py  transport.py
python/pondsocket-asgi/tests/: test_pondsocket_asgi_lifespan.py  test_pondsocket_asgi_scope.py  test_pondsocket_asgi_serialize.py  test_pondsocket_asgi_smoke.py  test_pondsocket_asgi_sse.py  test_pondsocket_asgi_websocket.py
python/pondsocket-client/: README.md  pyproject.toml
python/pondsocket-client/src/pondsocket_client/: __init__.py  _base.py  _channel.py  _websocket.py  client.py  typed.py  types.py
python/pondsocket-client/tests/: test_pondsocket_client_base.py  test_pondsocket_client_channel.py  test_pondsocket_client_integration.py  test_pondsocket_client_notfound_adversarial.py  test_pondsocket_client_reqresp_adversarial.py  test_pondsocket_client_smoke.py
python/pondsocket-common/: README.md  pyproject.toml
python/pondsocket-common/src/pondsocket_common/: __init__.py  enums.py  errors.py  headers.py  ids.py  schema.py  schemas.py  subjects.py  types.py
python/pondsocket-common/tests/: test_enums.py  test_errors.py  test_headers.py  test_ids.py  test_pondsocket_common_smoke.py  test_schema.py  test_schemas.py  test_subjects.py  test_types.py
python/pondsocket/src/pondsocket/: __init__.py  channel.py  distributed_wire.py  endpoint.py  errors.py  heartbeat.py  hooks.py  in_memory_transport.py  lobby.py  middleware.py  parser.py  presence.py  pubsub.py  pubsub_local.py  server.py  sse_transport.py  store.py  transport.py  typed.py  types.py  wire.py
python/pondsocket/src/pondsocket/contexts/: __init__.py  connection_context.py  event_context.py  join_context.py  leave_context.py  outgoing_context.py
python/pondsocket/src/pondsocket/distributed/: __init__.py  redis_pubsub.py
python/pondsocket/tests/: test_pondsocket_channel.py  test_pondsocket_channel_lifecycle_adversarial.py  test_pondsocket_distributed_local.py  test_pondsocket_distributed_protocol.py  test_pondsocket_errors.py  test_pondsocket_hooks_integration.py  test_pondsocket_hooks_unit.py  test_pondsocket_in_memory_transport.py  test_pondsocket_integration.py  test_pondsocket_join_autodecline_adversarial.py  test_pondsocket_leave_event_adversarial.py  test_pondsocket_middleware.py  test_pondsocket_parser.py  test_pondsocket_presence.py  test_pondsocket_pubsub.py  test_pondsocket_redis_pubsub.py  test_pondsocket_smoke.py  test_pondsocket_sse_invalid_message_adversarial.py  test_pondsocket_sse_transport.py  test_pondsocket_store.py
python/type-tests/: pond_schema.py
rust/: Cargo.toml  README.md
rust/pondsocket/: Cargo.toml
rust/pondsocket-axum/: Cargo.toml
rust/pondsocket-axum/src/: lib.rs
rust/pondsocket-client/: Cargo.toml
rust/pondsocket-client/src/: lib.rs  typed.rs
rust/pondsocket-common/: Cargo.toml
rust/pondsocket-common/src/: lib.rs
rust/pondsocket/src/: channel.rs  endpoint.rs  errors.rs  hooks.rs  lib.rs  lobby.rs  parser.rs  pubsub.rs  server.rs  transport.rs  typed.rs  types.rs  wire.rs
rust/pondsocket/src/contexts/: connection.rs  event.rs  join.rs  leave.rs  mod.rs  outgoing.rs
rust/pondsocket/src/distributed/: mod.rs  redis_pubsub.rs
(+127 files in other folders)
