[workspace]
members = [
    "pondsocket-common",
    "pondsocket",
    "pondsocket-axum",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["eleven-am"]
repository = "https://github.com/eleven-am/pondsocket"
homepage = "https://github.com/eleven-am/pondsocket"
keywords = ["websocket", "realtime", "pubsub", "presence"]
categories = ["web-programming", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
http = "1"
redis = { version = "1", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
