[project]
name = "pondsocket-client"
version = "0.0.6"
description = "PondSocket Python client — connect to a PondSocket server from Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "eleven-am" }]
dependencies = [
    "pondsocket-common>=0.0.6,<0.1.0",
    "websockets>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pondsocket_client"]

[tool.uv.sources]
pondsocket-common = { workspace = true }
