[project]
name = "pondsocket-common"
version = "0.0.2"
description = "Shared wire types, schemas, and reactive primitives for PondSocket."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "eleven-am" }]
dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pondsocket_common"]
