[package]
name = "pondsocket-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
http.workspace = true
pondsocket = { path = "../pondsocket" }
pondsocket-common = { path = "../pondsocket-common" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
