[package]
name = "pondsocket-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum WebSocket adapter for PondSocket."
readme = "../README.md"

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
http.workspace = true
pondsocket = { path = "../pondsocket", version = "0.1.0" }
pondsocket-common = { path = "../pondsocket-common", version = "0.1.0" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
