[package]
name = "pondsocket-common"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared wire types and distributed protocol primitives for PondSocket."
readme = "../README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
